Update to Junit 5 (#17)
* Update to Junit 5

* Change for a little mistake

* Change for reviews

* add back jimfs