@@ -1,11 +1,10 @@
 package cuchaz.enigma.translation.mapping.serde.recaf;
 
-import com.google.common.collect.Sets;
 import com.google.common.jimfs.Jimfs;
 import cuchaz.enigma.ProgressListener;
 import cuchaz.enigma.translation.mapping.EntryMapping;
 import cuchaz.enigma.translation.mapping.tree.EntryTree;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
@@ -14,8 +13,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashSet;
 import java.util.Set;
+import java.util.stream.Collectors;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class TestRecaf {
 
@@ -23,13 +23,12 @@ public class TestRecaf {
     public void testIntegrity() throws Exception {
         Set<String> contents;
         try (InputStream in = getClass().getResourceAsStream("/recaf.mappings")) {
-            contents = Sets.newHashSet(new String(in.readAllBytes(), StandardCharsets.UTF_8).split("\\R"));
+            contents = new String(in.readAllBytes(), StandardCharsets.UTF_8).lines().collect(Collectors.toSet());
         }
 
         try (FileSystem fs = Jimfs.newFileSystem()) {
-
             Path path = fs.getPath("recaf.mappings");
-            Files.writeString(path, String.join("\n", contents));
+            Files.write(path, contents);
 
             RecafMappingsWriter writer = RecafMappingsWriter.INSTANCE;
             RecafMappingsReader reader = RecafMappingsReader.INSTANCE;
